client/src/App.css
:root {
  --dark-brown: #482b1e;
  --light-brown: #74452f;
  --dark-color: #31212a;
  --light-color: #ffefd3;
  --dark-green: #264038;
  --brass: #b5a642;
  margin: 0 15rem;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

body {
  font-family: "Domine", serif;
  font-size: 1rem;
  line-height: 1.6;
  color: var(--brass);
  height: 100%;
  background-color: rgb(0, 0, 0, 0.8);
  background-image: url(./assets/library_background_01.jpg);
  /* background: center center; */
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  /* background-position: center; */
  background-blend-mode: soft-light;
}

.App {
  margin: 0 10rem;
}

.grid-2 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 2rem;
}

h1,
h2,
h3,
h4 {
  font-weight: 400;
  cursor: default;
}

p {
  cursor: default;
}

button,
.btn {
  font-family: "Domine", serif;
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: no-repeat;
  background-size: 1000px 1000px;
  background-position-x: 70%;
  background-position-y: 30%;
  border-radius: 2px;
  color: var(--brass);
  text-decoration: none;
  border: 1px solid rgba(181, 166, 66, 0.4);
  box-shadow: 0 0 5px black;
  cursor: pointer;
  outline: none;
}

button:hover,
.btn:hover {
  border: 1px solid rgba(181, 166, 66, 0.7);
}

a {
  color: var(--brass);
  text-decoration: none;
  /* border: var(--brass) 1px solid; */
  padding: 0.1rem 0.5rem;
  margin: 1rem;
}

/* Navbar */
#navbar {
  list-style: none;
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: repeat;
  background-size: 1000px 1000px;
  background-position-x: 50%;
  background-position-y: 10%;
  border: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 3px;
  box-shadow: 0 0 5px black;
  /* display: flex; */
  margin: 0 7rem;
}

#title {
  font-size: 2rem;
  cursor: default;
  width: 100%;
  height: 9rem;
  display: flex;
  justify-content: center;
  /* position: static; */
  /* padding-bottom: 0.5rem; */
}

.nav-links {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  flex-direction: row;
}

.nav-links .nav-button {
  font-size: 1rem;
  margin: 0.2rem 0.3rem;
  box-shadow: 0 0 5px black;
}

/* Shelf */
.intro {
  display: flex;
  justify-content: center;
  margin: 2rem 10rem 0 10rem;
  padding: 0.4rem 0;
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: repeat;
  background-size: 1000px 1000px;
  background-position: top center;
  background-position-x: 40%;
  background-position-y: 20%;
  border-top: 1px solid rgba(181, 166, 66, 0.2);
  border-left: 1px solid rgba(181, 166, 66, 0.2);
  border-right: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 3px 3px 0 0;
  box-shadow: 0 0 5px black;
}

.shelf-container {
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: repeat;
  background-size: 1300px 1300px;
  background-position: top center;
  background-position-x: 40%;
  background-position-y: 20%;
  border: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 3px;
  box-shadow: 0 0 5px black;
  padding: 0.5rem;
}

.shelf {
  border: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 3px;
  padding: 1rem;
  background-color: var(--dark-green);
  display: grid;
  grid-template-rows: 20rem / auto auto;
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 2rem 1rem;
}

.book-info {
  border: 1px solid var(--dark-color);
  margin: 1rem 1.5rem 3rem 1.5rem;
  background-color: var(--dark-brown);
  border-radius: 2px;
  max-width: 8rem;
  height: 11rem;
  position: relative;
}

.book-info:hover {
  border: 1px solid rgba(181, 166, 66, 0.7);
}

.book-info h4 {
  font-style: italic;
}

.book-info img {
  /* border: 2px solid var(--dark-color); */
  border-radius: 1px;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.book-info .details {
  display: flex;
  flex-direction: column;
}

.book-info .details p {
  margin: 0;
}

.book-info .details .book-title {
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: no-repeat;
  background-size: 1000px 1000px;
  background-position: top center;
  border: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 2px;
  box-shadow: 0 0 5px black;
  display: flex;
  padding: 0.2rem 0 0.2rem 0.6rem;
  font-size: 0.7rem;
  white-space: nowrap;
  width: 7.3rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

.book-info button {
  padding: 0.3rem;
  font-size: 0.6rem;
  position: absolute;
  transform: translate(-100%, 0);
  box-shadow: none;
  /* border-left: 1px solid rgba(181, 166, 66, 0.4); */
  /* border-bottom: 1px solid rgba(181, 166, 66, 0.4); */
}

.book-info button:hover {
  text-decoration: underline;
}

/* Desk, Search */
.desk,
.search-container {
  background-color: var(--dark-brown);
  background-image: url(./assets/dark_wood_02.jpg);
  background-repeat: repeat;
  background-size: 1000px 1000px;
  background-position: top center;
  background-position-x: 40%;
  background-position-y: 20%;
  border: 1px solid rgba(181, 166, 66, 0.2);
  border-radius: 3px;
  box-shadow: 0 0 5px black;
  padding: 1rem;
  margin: 1rem;
}

.cover-image-desk {
  border: var(--dark-color) 3px solid;
  border-radius: 3px;
  background-color: var(--dark-brown);
  width: 14rem;
  height: 20rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.results-headers {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1rem;
  text-decoration: underline;
}

/* .results-items {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-gap: 1rem;
} */

